--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,39 +1,10 @@
-.background {
-  viewport-fill: white;
+text     { font-size: 32; font-family: Seville-Condensed; text-length: 32; }
+textarea { font-size: 32; font-family: Seville-Condensed; text-length: 1024; }
+
+.hide {
+  display: none;
 }
 
-text     { font-size: 32; font-family: System-Regular; font-weight: regular; y: 12; text-length: 32; }
-textarea { font-size: 32; font-family: System-Regular; font-weight: regular; y: 12; text-length: 1024; }
-
-#name {
-  font-size: 25;
-  fill: #00B2FF;
-  font-weight: bold;
-}
-
-#distance {
-  font-size: 35;
-}
-
-.bike-counter {
-  font-size: 22
-}
-
-/* We separate list items with a 2px rect.
- * Make sure to set
- */
-.list-separator {
-  x: 0;
-  y: 100%-2;
-  width: 100%;
-  height: 2;
-  fill: fb-extra-dark-gray;
-}
-
-#loading {
-  display: inline;
-}
-
-#main {
+.hide * {
   display: none;
 }
